# PHCC

./: .gitignore  Makefile  README.md  meson.build
.github/workflows/: makefile.yml
include/: ast.h  lexer.l  token.h  utils.h
src/: ast.c  main.c  token.c  utils.c
subprojects/: unity.wrap
test/: lexer_test_utils.h  lexer_tests.c
